# gst-projectm

./: CMakeLists.txt  README.md  build.ps1  build.sh  convert.sh  setup.sh  test.ps1  test.sh  vcpkg.json
.github/workflows/: build_linux.yml  build_osx.yml  build_portable.yml  build_windows.yml  release.yml
docs/: LINUX.md  OSX.md  OVERVIEW.md  WINDOWS.md
example/: CMakeLists.txt  dynpads.c
src/: bufferdisposal.c  bufferdisposal.h  config.h  debug.c  debug.h  gstdmabufegl.c  gstdmabufegl.h  gstdmabufpool.c  gstdmabufpool.h  gstglbaseaudiovisualizer.c  gstglbaseaudiovisualizer.h  gstnv12shader.c  gstnv12shader.h  gstpmaudiovisualizer.c  gstpmaudiovisualizer.h  gstprojectm.c  gstprojectm.h  gstprojectmbase.c  gstprojectmbase.h  gstprojectmcaps.c  gstprojectmcaps.h  gstprojectmconfig.h  plugin.c  pushbuffer.c  pushbuffer.h  register.c  renderbuffer.c  renderbuffer.h
